--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "mcp4728"
 version = "0.1.0"
 edition = "2021"
+description = "Platform agnostic rust driver for the MCP4728 4-channel, 12-bit I2C DAC."
+readme = "README.md"
+repository = "https://github.com/davidstalnaker/mcp4728"
 license = "MIT OR Apache-2.0"
+keywords = ["dac", "driver", "embedded-hal-driver"]
+categories = ["no-std", "embedded", "hardware-support"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 embedded-hal = "0.2.7"
