--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["no-std", "embedded", "hardware-support"]
 
 [dependencies]
 embedded-hal = "0.2.7"
-num_enum = "0.5.7"
+num_enum = { version = "0.5.7", default-features = false }
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 linux-embedded-hal = "0.3.2"
