--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,8 @@ categories = ["no-std", "embedded", "hardware-support"]
 embedded-hal = "0.2.7"
 num_enum = { version = "0.5.7", default-features = false }
 
+[dev-dependencies]
+embedded-hal-mock = "0.8.0"
+
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 linux-embedded-hal = "0.3.2"
