--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,6 @@
 on: [push, pull_request]
 
-name: Continuous integration
+name: Test
 
 jobs:
   check:
@@ -10,7 +10,7 @@ jobs:
       matrix:
         rust:
           - stable
-          - 1.56.0  # MSRV
+          - 1.56.0 # MSRV
 
         target:
           - x86_64-unknown-linux-gnu
@@ -36,7 +36,7 @@ jobs:
       matrix:
         rust:
           - stable
-          - 1.56.0  # MSRV
+          - 1.56.0 # MSRV
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
