--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ categories = ["no-std", "embedded", "hardware-support"]
 autoexamples = false
 
 [dependencies]
-embedded-hal = "0.2.7"
+embedded-hal = "1.0.0"
 num_enum = { version = "0.7.2", default-features = false }
 
 [dev-dependencies]
-embedded-hal-mock = "0.10.0"
+embedded-hal-mock = { version = "0.10.0", default-features = false, features = ["eh1"] }
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
-linux-embedded-hal = "0.3.2"
+linux-embedded-hal = "0.4.0"
