--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,14 @@ autoexamples = false
 
 [features]
 defmt-03 = ["dep:defmt"]
+async = ["dep:embedded-hal-async"]
+# Use embedded-hal-mock/embedded-hal-async once https://github.com/dbrgn/embedded-hal-mock/issues/118 is fixed
 
 [dependencies]
 defmt = { version = "0.3", optional = true }
 embedded-hal = "1.0.0"
 num_enum = { version = "0.7.2", default-features = false }
+embedded-hal-async = { version = "1.0.0", optional = true }
 
 [dev-dependencies]
 embedded-hal-mock = { version = "0.10.0", default-features = false, features = ["eh1"] }
