--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["no-std", "embedded", "hardware-support"]
 autoexamples = false
 
 [features]
-defmt-03 = ["dep:defmt"]
+defmt = ["dep:defmt"]
 
 [dependencies]
 defmt = { version = "0.3", optional = true }
@@ -19,7 +19,9 @@ embedded-hal = "1.0.0"
 num_enum = { version = "0.7.2", default-features = false }
 
 [dev-dependencies]
-embedded-hal-mock = { version = "0.10.0", default-features = false, features = ["eh1"] }
+embedded-hal-mock = { version = "0.10.0", default-features = false, features = [
+  "eh1",
+] }
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 linux-embedded-hal = "0.4.0"
