--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "mcp4728"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.75"
 description = "Platform agnostic rust driver for the MCP4728 4-channel, 12-bit I2C DAC."
 readme = "README.md"
 repository = "https://github.com/davidstalnaker/mcp4728"
